recursion.cons.lessons.recursion.cons.PlusOne.scala.error
plusOne:3: error: value :: is not a member of Int
		case a::b => (a+1)::plusOne(b)
                                  ^plusOne:4: error: type mismatch;
 found   : scala.collection.immutable.Nil.type
 required: Int
		case _    => Nil
                             ^