recursion.cons.lessons.recursion.cons.PlusOne.scala.code
def plusOne(l:List[Int]): Int = {
	l match {
		case a::b => (a+1)::plusOne(b)
		case _    => Nil
 	}
}
